Fix bug of overflowing book titles and allow for longer titles

--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ button {
     display: flex;
     flex-direction: column;
 
-    height: 300px;
+    height: 320px;
 
     padding: 16px;
     gap: 16px;
@@ -93,23 +93,25 @@ button {
 }
 
 .book-card .book-title {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-weight: 600;
+
+    overflow-wrap:break-word;
 }
 
 .book-card .book-author {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     font-weight: 400;
     font-style: italic;
 }
 
 .book-card .book-pages {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     font-weight: 400;
 }
 
 .book-card .book-status {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     font-weight: 500;
 }
 
@@ -126,6 +128,7 @@ button {
 }
 
 .status-button {
+    margin-top: auto;
     color: var(--darkGreen);
     
     border: 3px solid var(--darkGreen);
